# ParalleL_Compiler

./: CMakeLists.txt  a.cpp  annotate.hpp  builder.cpp  builder.hpp  datarace.cpp  datarace.hpp  definitions.hpp  errors.hpp  expression.cpp  expression.hpp  funcdef.hpp  main.cpp  oop.cpp  oop.hpp  parse.cpp  parse.hpp  reductor.cpp  reductor.hpp  test.pl  test2.pl  test3.pl  type.cpp  type.hpp  typecheck.cpp  typecheck.hpp  utils.cpp  utils.hpp
Codegen/CppCodegen/: includer.hpp  main_gen.cpp  main_gen.hpp
CompilerErrors/: base_error.hpp  processing_error.hpp  syntax_errors.hpp
Parser/: analyze.cpp  analyze.hpp  builder.cpp  builder.hpp  parse.cpp  parse.hpp  utils.cpp  utils.hpp
Runtime/: base_variables.hpp  entity.hpp  function.hpp  system.cpp  system.hpp  type_traits.hpp
TypeSystem/: expression.hpp  rules.cpp  rules.hpp  term.cpp  term.hpp  type.cpp  type.hpp  typecheck.hpp
base_lib/: alg.cpp  alg.hpp  base.cpp  base.hpp  io.cpp  io.hpp  operators.cpp  operators.hpp
codegen/: create_gen.cpp  create_gen.hpp  i_codegen.hpp
codegen/cpp/: codegen.cpp  codegen.hpp  sample.cpp  source.hpp
testing/: testing_expr_builder.cpp  testing_type_builder.cpp  testing_typecheck.cpp
